# agent-skills

./: .gitignore  LICENSE  README.md
context-engineering/: .gitignore  ACADEMIC.md  ROADMAP-v4.md  ROADMAP.md  SKILL.md  SPEC-mcp.md  pyproject.toml  requirements.txt
context-engineering/.github/workflows/: ce-check.yml.sample
context-engineering/cognitive_tools/: LICENSE-davidkimai  README.md  explain.md  fix.md
context-engineering/docs/: benchmarks-flipt-smoke.md  benchmarks-v1-autodiff.md  benchmarks-v1.md  benchmarks.md  sg-evals-uploader-design.md  vs-context-signals.md  vs-lat-md.md
context-engineering/docs/learn/: 00-pack-one-query.md  01-budget-and-depth.md  02-index-a-workspace.md  03-graph-and-multi-hop.md  04-add-a-source.md  05-entitystore-and-wiki.md  README.md
context-engineering/eval/: mistral_throttle_probe.py
context-engineering/eval/csb/: .mcp.json.template  README.md  csb_to_spec.py  diff_runs.py  index_all_repos.py  ir_metrics.py  patch_branches.py  preflight.py  prompt-injection.md  retry_404_repos.py  run_bench.py  run_ir_bench.py  setup_corpus.py  smoke_semantic.py  smoke_server_embed.py
context-engineering/eval/csb/converted-tasks/ansible-abc-imports-fix-001/: ground_truth.json  spec.json
context-engineering/eval/csb/converted-tasks/aspnetcore-code-review-001/: ground_truth.json  spec.json
context-engineering/eval/csb/converted-tasks/beam-pipeline-builder-refac-001/: ground_truth.json  spec.json
context-engineering/eval/csb/runs/: flipt-ce-codestral-mmr.jsonl  flipt-ce-codestral.jsonl  flipt-ce-keyword.jsonl  flipt-ce-shipping.jsonl
context-engineering/eval/csb/tests/: test_csb_adapter.py  test_diff_runs.py  test_index_all_repos.py  test_ir_metrics.py  test_preflight.py  test_run_bench.py
context-engineering/hooks/: pre-commit.sample
context-engineering/plan/: COMPASS.md  PRD-latmd-integration.md  ce-v1.1-bench-readiness.md  ce-v1.1-phase-b-async-and-scix-patterns.md  findings.md  prd-closed-loop.md  production-mcp-shipping-plan.md  progress.md  task_plan.md  wave-0-demo.md
context-engineering/plan/audits/: final-cross-phase.md  option-b-coherence.md  phase-0-5.md  phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-A.md  spec-mcp-vs-mcp-builder-2026-05-04.md
context-engineering/plan/phases/: phase-0-5.md  phase-0-patches.md  phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-A.md
context-engineering/plan/proposals/: latmd-integration.md  wiki-impact-of.md
context-engineering/references/: claw-code-patterns.md  eval-results.md
context-engineering/scripts/: ast_extract.py  code_graph.py  community_detect.py  concept_labeler.py  embed_resolve.py  feature_map.py  graphify_adapter.py  index_github_repo.py  index_workspace.py  mcp_server.py  mmr.py  pack_context.py  pack_context_lib.py  tsconfig_resolver.py  visualize_graph.py
context-engineering/scripts/eval/: eval_graph_vs_keyword.py  run_eval.py  run_eval_fastify.py  run_eval_flask.py
context-engineering/scripts/tests/: test_code_index.py  test_cognitive_tool.py  test_community_detect.py  test_concept_labeler.py  test_embed_resolve_rank.py  test_feature_map.py  test_graphify_wiki_source.py  test_impact_of.py  test_indexer_and_graph.py  test_lat_check.py  test_lat_mcp.py  test_source_adapter.py  test_source_comment_backlink.py  test_visualize_graph.py  test_wiki_mcp.py  test_wiki_p3.py  test_wiki_p4.py  test_wikiref.py
context-engineering/scripts/wiki/: __init__.py  audit.py  code_index.py  events.py  freshness_policy.py  impact_of.py  lat_check.py  semantic_shift.py  source_adapter.py  validate_page.py  wiki_init.py  wikiref.py
context-engineering/scripts/wiki/demo/: __init__.py  run_demo.py  seed_brain.py
context-engineering/server-prod/: README.md  pyproject.toml  requirements.txt  vercel.json
context-engineering/server-prod/_lib/: __init__.py  annotations.py  async_indexer.py  auth.py  corpus_access.py  corpus_store.py  embed.py  engine.py  errors.py  github_auth.py  job_store.py  jobs.py  locks.py  transport.py  version.py
context-engineering/server-prod/_lib/storage/: __init__.py  blob.py  kv.py  local.py
context-engineering/server-prod/_lib/tools/: __init__.py  find.py  get_job_status.py  health.py  index_github_repo.py  list_corpora.py  pack.py  upload_corpus.py
context-engineering/server-prod/api/: health.py  mcp.py
context-engineering/server-prod/api/cron/: index_worker.py
context-engineering/server-prod/tests/: conftest.py  test_github_auth.py  test_locks.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase5_5.py  test_phase_a_blob.py  test_phase_b1_kv_and_jobs.py  test_phase_b2_async_indexer.py  test_phase_b4_coverage.py  test_phase_p2_indexer.py  test_phase_p4_deep_health.py
context-engineering/server-stub/: README.md  build_demo_index.py  requirements.txt
context-engineering/server-stub/_lib/: auth.py  packer.py
context-engineering/server-stub/api/: health.py  list_corpora.py  pack_context.py
context-engineering/server-stub/cache/: gh-victorgjn-agent-skills-context-engineering.index.json
context-engineering/server-stub/public/: index.html
install-department/: pyproject.toml
install-department/references/: department-spec-template.md  example-product-spec.md  interview-prompts.md  methodology-patterns.md  role-taxonomies.md  tool-probes.md
install-department/scripts/: install_department.py  interview.py  probe_tool.py  synthesize.py  validate.py
(+216 files in other folders)
