[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context_engineering_mcp"
version = "1.0.0"
description = "CE MCP production server — conformant Streamable HTTP + stdio transport for the SPEC-mcp.md v1.0 contract"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Victor Grosjean" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31",
    # GitHub App auth (RS256). Mirror requirements.txt — Vercel installs from
    # requirements.txt at deploy, but `pip install -e .` / test envs use
    # this list. See _lib/github_auth.py.
    "pyjwt[crypto]>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server_prod*"]

[tool.ruff]
line-length = 110
target-version = "py311"
